Fixed top clipping

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,5 @@
 #app-root > div {
-	position: absolute;
-
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+	margin: 5% auto;
 
 	padding: 1%;
 	text-align: center;
